--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+// Bootstrap Framework
+@import "assets/bootstrap/bootstrap";
+
+// Font Awesome
+@import "assets/font-awesome/font-awesome";
