--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,19 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+
   <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" aria-controls="collapseExample" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
+  <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="collapseExample" [ngbCollapse]="!isCollapsed">
+  <div class="collapse navbar-collapse" [ngbCollapse]="!isCollapsed">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#" aria-controls="collapseExample" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Home
+        <a class="nav-link" href="#" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" aria-controls="collapseExample" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">About</a>
+        <a class="nav-link" href="#" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">About</a>
       </li>
       <li class="nav-item dropdown" ngbDropdown>
         <a class="nav-link" ngbDropdownToggle>Dropdown link</a>
@@ -27,4 +28,5 @@
       </li>
     </ul>
   </div>
+
 </nav>
