--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,12 +8,12 @@
   <div class="collapse navbar-collapse" [ngbCollapse]="!isCollapsed">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Home
+        <a class="nav-link" routerLink="/home" routerLinkActive="active" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">About</a>
+        <a class="nav-link" routerLink="/about" routerLinkActive="active"  (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">About</a>
       </li>
       <li class="nav-item dropdown" ngbDropdown>
         <a class="nav-link" ngbDropdownToggle>Dropdown link</a>
