--- a/src/scss/bootstrap/_bootstrap.scss
+++ b/src/scss/bootstrap/_bootstrap.scss
@@ -11,6 +11,7 @@
 @import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
+@import "custom/buttons";
 @import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/dropdown";
 @import "~bootstrap/scss/button-group";
