--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,12 +15,12 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/about" routerLinkActive="active" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">About</a>
       </li>
-      <li class="nav-item dropdown" ngbDropdown>
+      <li class="nav-item dropdown" ngbDropdown routerLinkActive="active">
         <a class="nav-link" ngbDropdownToggle>Dropdown link</a>
         <div class="dropdown-menu" ngbDropdownMenu>
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" routerLink="dropdown/link1" routerLinkActive="active" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Link 01</a>
+          <a class="dropdown-item" routerLink="dropdown/link2" routerLinkActive="active" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Link 02</a>
+          <a class="dropdown-item" routerLink="dropdown/link3" routerLinkActive="active" (click)="isCollapsed = false" [attr.aria-expanded]="!isCollapsed">Link 03</a>
         </div>
       </li>
       <li class="nav-item">
