installed Angular CLI 8.3.22

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,1 @@
-// Bootstrap Framework
-@import "scss/bootstrap/bootstrap";
-
-// Font Awesome
-@import "scss/font-awesome/font-awesome";
+/* You can add global styles to this file, and also import other style files */
