--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,38 @@
-<h1>Ready</h1>
+<header>
+    <div class="container-fluid">
+        <h1>Header</h1>
+    </div>
+</header>
+<div class="content-wrapper">
+    <section class="primary-content">
+        <div class="container-fluid">
+            <h1>Primary Content</h1>
+            <div class="row">
+                <div class="col-sm-8">
+                    <p>Main content</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Sidebar</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="secondary-content">
+        <div class="container-fluid">
+            <h1>Secondary Content</h1>
+            <div class="row">
+                <div class="col-sm-8">
+                    <p>Main content</p>
+                </div>
+                <div class="col-sm-4">
+                    <p>Sidebar</p>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+<footer>
+    <div class="container-fluid">
+        <h1>Footer</h1>
+    </div>
+</footer>
