colors and font variables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
             <div class="row">
                 <div class="col-sm-8">
                     <p>Main content</p>
+                    <p><a href="/test">Test Link</a></p>
                 </div>
                 <div class="col-sm-4">
                     <p>Sidebar</p>
@@ -17,7 +18,7 @@
             </div>
         </div>
     </section>
-    <section class="secondary-content">
+    <section>
         <div class="container-fluid">
             <h1>Secondary Content</h1>
             <div class="row">
