--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 
 // Custom LabCorp Styling
-@import "assets/theme/variables";
+@import "assets/scss/labcorp/variables";
 
 // Required
 @import "~bootstrap/scss/functions";
