--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,40 @@
-<header>
-    <div class="container-fluid">
-        <h1>Header</h1>
+<header class="app-header">
+    <div class="primary-content">
+        <div class="container-fluid">
+            <ul class="nav justify-content-end">
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.labcorp.com/frequently-asked-questions/patient">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.labcorp.com/help/contact-info-for-patient/patient-inquiry">Contact LabCorp</a>
+                </li>
+              </ul>
+        </div>
     </div>
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">AppName</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Appointments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Test Results</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Invoices</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <a href="#" class="btn btn-light my-2 my-sm-0" type="submit">Jill Smith</a>
+                </form>
+            </div>
+        </div>
+    </nav>
 </header>
 <div class="content-wrapper">
     <section class="primary-content">
@@ -10,7 +43,6 @@
             <div class="row">
                 <div class="col-sm-8">
                     <p>Main content</p>
-                    <p><a href="/test">Test Link</a></p>
                 </div>
                 <div class="col-sm-4">
                     <p>Sidebar</p>
