--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
-
-// Custom LabCorp Styling
-@import "assets/scss/labcorp/variables";
+// Custom bootstrap-overrides Required Styling
+@import "assets/scss/bootstrap-overrides/variables";
 
 // Required
 @import "~bootstrap/scss/functions";
@@ -14,16 +13,20 @@
 @import "~bootstrap/scss/images";
 @import "~bootstrap/scss/code";
 @import "~bootstrap/scss/grid";
+@import "assets/scss/bootstrap-overrides/grid"; //bootstrap-overrides Overrides
 @import "~bootstrap/scss/tables";
 @import "~bootstrap/scss/forms";
 @import "~bootstrap/scss/buttons";
+@import "assets/scss/bootstrap-overrides/buttons"; //bootstrap-overrides Overrides
 @import "~bootstrap/scss/transitions";
 @import "~bootstrap/scss/dropdown";
 @import "~bootstrap/scss/button-group";
 @import "~bootstrap/scss/input-group";
 @import "~bootstrap/scss/custom-forms";
 @import "~bootstrap/scss/nav";
+@import "assets/scss/bootstrap-overrides/nav"; //bootstrap-overrides Overrides
 @import "~bootstrap/scss/navbar";
+@import "assets/scss/bootstrap-overrides/navbar"; //bootstrap-overrides Overrides
 @import "~bootstrap/scss/card";
 @import "~bootstrap/scss/breadcrumb";
 @import "~bootstrap/scss/pagination";
@@ -42,3 +45,7 @@
 @import "~bootstrap/scss/spinners";
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/print";
+
+//Custom bootstrap-overrides Styles
+@import "assets/scss/labcorp/layout";
+@import "assets/scss/labcorp/app-header";
