--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<header class="app-header">
+<header class="app-header fixed-top">
     <div class="primary-content">
         <div class="container-fluid">
             <ul class="nav justify-content-end">
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">AppName</a>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Dashboard</a>
@@ -29,14 +29,14 @@
                         <a class="nav-link" href="#">Invoices</a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <a href="#" class="btn btn-light my-2 my-sm-0" type="submit">Jill Smith</a>
-                </form>
             </div>
+            <form class="form-inline my-0">
+                <a href="#" class="btn btn-light my-2 my-sm-0" type="submit">Jill Smith</a>
+            </form>
         </div>
     </nav>
 </header>
-<div class="content-wrapper">
+<div class="content-wrapper mt-10">
     <section class="primary-content">
         <div class="container-fluid">
             <h1>Primary Content</h1>
