--- a/src/assets/scss/bootstrap-overrides/_variables.scss
+++ b/src/assets/scss/bootstrap-overrides/_variables.scss
@@ -41,7 +41,10 @@ $spacers: map-merge(
     4: $spacer,
     5: ($spacer * 1.5),
     6: ($spacer * 2),
-    7: ($spacer * 3)
+    7: ($spacer * 3),
+    8: ($spacer * 4),
+    9: ($spacer * 6),
+    10: ($spacer * 8)
   ),
   $spacers
 );
